--- a/src/components/Utils/MovieDetails/MovieDetails.css
+++ b/src/components/Utils/MovieDetails/MovieDetails.css
@@ -1,16 +1,43 @@
 .mainContainer {
     display: flex;
     justify-content: center;
+    margin-top: 1vh;
+}
+
+.leftPanel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1vh;
+    width: 20vw;
+}
+
+.controlPanel {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    padding-right: 1vw;
+    border-radius: 15px;
+    justify-content: flex-end;
+    align-items: center;
     margin-top: 3vh;
+    background-color: var(--bs-light);
+    width: 85vw;
+    height: 5vh;
+    gap: 1vw;
 }
 
 .movieDetailsContainer {
     background-color: var(--bs-light);
     padding: 15px;
+    margin-bottom: 2vh;
     width: 85vw;
     height: auto;
     border-radius: 15px;
     display: flex;
+    flex-direction: column;
     gap: 15px;
 }
 
@@ -20,8 +47,17 @@
     flex-direction: column;
 }
 
+.info {
+    display: flex;
+}
+
+.videoPlayer {
+    width: 70vw;
+    height: 70vh;
+}
+
 .movieDetailsImage {
-    max-width: 25%;
+    max-width: 80%;
     min-height: 200px;
     max-height: 35%;
 }
